--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>
+        <h1 class="main-heading">
             Discover hidden places in the world around you.
         </h1>
-        <a href="" target="_blank">Download Excursion (Coming soon!)</a>
+        <a href="" target="_blank" class="link">Download Excursion (Coming soon!)</a>
     </header>
+    <main>
+        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" autoplay loop></video>
+    </main>
 </body>
 </html>
