--- a/index.html
+++ b/index.html
@@ -15,7 +15,24 @@
         <a href="" target="_blank" class="link">Download Excursion (Coming soon!)</a>
     </header>
     <main>
-        <video src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4" autoplay loop></video>
+        <video autoplay loop>
+            <source src="./resources/video/excursion.mp4" type="video/mp4">
+        </video>
+        <section>
+            <h1 class="second-heading">
+                Your personal travel guide
+            </h1>
+            <p class="description">Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg"/>
+        </section>
     </main>
+    <footer>
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" class="icon"/>
+        <h1 class="second-heading">
+            Coming Soon for iPhone and Android
+        </h1>
+        <a href="" target="_blank" class="link">Download Excursion (Coming soon!)</a>
+        <p class="company">Excursion</p>
+    </footer>
 </body>
 </html>
